--- a/Ai-rate-me.html
+++ b/Ai-rate-me.html
@@ -5,6 +5,7 @@
 <title>🔥 Hot or Not AI 🔥</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Libraries -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.15.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
@@ -12,61 +13,134 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <style>
-  html, body {
+  body {
     margin: 0;
-    padding: 0;
-    background: black;
-    overflow: hidden;
     font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
     color: white;
-  }
-  video, canvas {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    object-fit: cover;
-  }
-  #overlay {
-    pointer-events: none;
-  }
-  .bottomPanel {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
-    background: rgba(0,0,0,0.4);
-    padding: 15px 20px;
-    border-radius: 15px;
-    backdrop-filter: blur(10px);
-    opacity: 0;
-    transition: opacity 1s ease;
   }
+  @keyframes gradientBG {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+  }
+  h1 { margin-top: 30px; }
+  button {
+    padding: 15px 30px;
+    background: rgba(255,255,255,0.1);
+    border: 2px solid rgba(255,255,255,0.3);
+    border-radius: 12px;
+    color: white;
+    backdrop-filter: blur(10px);
+    cursor: pointer;
+    font-size: 18px;
+    transition: all 0.3s ease;
+  }
+  button:hover { background: rgba(255,255,255,0.2); transform: scale(1.05); }
+  #resultCard {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 15px;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(12px);
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+  }
+  .score { font-size: 26px; font-weight: bold; margin: 10px 0; }
   .glow { animation: glowPulse 1s infinite alternate; }
   @keyframes glowPulse {
     from { text-shadow: 0 0 5px #fff, 0 0 10px #ff4d6d; }
     to { text-shadow: 0 0 15px #fff, 0 0 25px #ff4d6d; }
   }
+  .vibe, .type, .badge, .rank {
+    font-size: 18px; margin-top: 10px; opacity: 0; transition: opacity 1s ease;
+  }
+  img { max-width: 100%; border-radius: 10px; margin-top: 15px; }
+  .loader {
+    display: none;
+    border: 6px solid rgba(255,255,255,0.1);
+    border-top: 6px solid #ff4d6d;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    margin: 20px auto;
+  }
+  @keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
+  #modal {
+    display: none;
+    position: fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: rgba(0,0,0,0.7);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+  }
+  .modalContent {
+    background: rgba(255,255,255,0.1);
+    padding: 30px;
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    text-align: center;
+  }
+  .flash { animation: flashRainbow 0.5s ease; }
+  @keyframes flashRainbow {
+    0% { background: red; }
+    20% { background: orange; }
+    40% { background: yellow; }
+    60% { background: green; }
+    80% { background: blue; }
+    100% { background: purple; }
+  }
+  .shake { animation: shakeAnim 0.4s ease; }
+  @keyframes shakeAnim {
+    0% { transform: translate(0,0); }
+    25% { transform: translate(-5px, 5px); }
+    50% { transform: translate(5px, -5px); }
+    75% { transform: translate(-5px, -5px); }
+    100% { transform: translate(0,0); }
+  }
 </style>
 </head>
 <body>
 
-<video id="camera" autoplay muted playsinline></video>
-<canvas id="overlay"></canvas>
+<h1>🔥 Hot or Not AI 🔥</h1>
+<button id="rateMeBtn">RATE ME</button>
 
-<div class="bottomPanel" id="resultsPanel">
-  <div id="vibeText"></div>
-  <div id="typeText"></div>
-  <div id="badgeText"></div>
-  <div id="rankText"></div>
+<div id="resultCard">
+  <img id="preview">
+  <div class="score" id="faceScore">Face Score: 0.0/10</div>
+  <div class="score" id="bodyScore">Body Score: 0.0/10</div>
+  <div class="vibe" id="vibeText"></div>
+  <div class="type" id="typeText"></div>
+  <div class="badge" id="badgeText"></div>
+  <div class="rank" id="rankText"></div>
+  <button id="shareBtn">📤 Share My Result</button>
+</div>
+
+<div class="loader" id="loader"></div>
+
+<input type="file" id="fileInput" accept="image/*" style="display:none;">
+
+<div id="modal">
+  <div class="modalContent">
+    <h2>📸 Choose Your Photo</h2>
+    <button onclick="document.getElementById('fileInput').click()">Upload from Device</button>
+    <br><br>
+    <button onclick="openCamera()">Take Photo</button>
+    <br><br>
+    <button onclick="closeModal()">Cancel</button>
+  </div>
 </div>
 
 <script>
-let faceModel, bodyModel, detector, video, canvas, ctx;
-let scorePhase = 0; // 0=waiting, 1=face, 2=body, 3=done
-let faceScoreFinal = 0, bodyScoreFinal = 0;
-let tickerScore = 0;
-let faceBox = null;
+let faceModel, bodyModel, detector;
 const vibes = ["Confident Charmer 😎","Playful Energy 😜","Mysterious Allure 🖤","Romantic Dreamer 💖","Adventurous Spirit 🌍","Life of the Party 🎉"];
 const roastTypes = [
   "People who treat red flags as decorative lights 🚩",
@@ -80,86 +154,50 @@ const badges = ["Certified Heartbreaker 💔","Main Character Energy 🎬","Dang
 function randomRank(){ return `Top ${Math.floor(Math.random()*50)+1}% of uploads today`; }
 
 async function loadModels() {
+  document.getElementById("loader").style.display = "block";
   await faceapi.nets.ssdMobilenetv1.loadFromUri('https://cdn.jsdelivr.net/gh/justadudewhohacks/face-api.js/models');
   faceModel = await tf.loadLayersModel('https://huggingface.co/datasets/ayasy/face_beauty_tfjs/resolve/main/model.json');
   bodyModel = faceModel;
   detector = await poseDetection.createDetector(poseDetection.SupportedModels.BlazePose, { runtime: 'tfjs', modelType: 'full' });
+  document.getElementById("loader").style.display = "none";
 }
 
-async function initCamera() {
-  video = document.getElementById('camera');
-  const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-  video.srcObject = stream;
-  await new Promise(res => video.onloadedmetadata = res);
-}
+function openModal(){ document.getElementById('modal').style.display = 'flex'; }
+function closeModal(){ document.getElementById('modal').style.display = 'none'; }
 
-async function detectFrame() {
-  const detections = await faceapi.detectSingleFace(video);
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  if (detections) {
-    faceBox = detections.box;
-    ctx.strokeStyle = 'rgba(255,255,255,0.7)';
-    ctx.lineWidth = 2;
-    ctx.strokeRect(faceBox.x, faceBox.y, faceBox.width, faceBox.height);
-
-    // Draw ticker above head
-    const tickerY = faceBox.y - 20;
-    ctx.font = "28px Arial";
-    ctx.fillStyle = "#ff4d6d";
-    ctx.textAlign = "center";
-    let label = "";
-    if (scorePhase === 1) label = `Face: ${tickerScore.toFixed(1)}/10`;
-    if (scorePhase === 2) label = `Body: ${tickerScore.toFixed(1)}/10`;
-    if (label) ctx.fillText(label, faceBox.x + faceBox.width/2, tickerY);
-  }
-  requestAnimationFrame(detectFrame);
-}
-
-async function scoreSequence() {
-  const cropFace = document.createElement('canvas');
-  cropFace.width = 400; cropFace.height = 400;
-  if (faceBox) {
-    cropFace.getContext('2d').drawImage(video, faceBox.x, faceBox.y, faceBox.width, faceBox.height, 0, 0, 400, 400);
-    faceScoreFinal = await predictScore(cropFace, faceModel);
-  }
-  const poses = await detector.estimatePoses(video);
-  if (poses.length) {
-    const xs = poses[0].keypoints.map(k=>k.x), ys = poses[0].keypoints.map(k=>k.y);
-    const box = { x: Math.min(...xs), y: Math.min(...ys), width: Math.max(...xs)-Math.min(...xs), height: Math.max(...ys)-Math.min(...ys) };
-    const cropBody = document.createElement('canvas');
-    cropBody.width = 400; cropBody.height = 400;
-    cropBody.getContext('2d').drawImage(video, box.x, box.y, box.width, box.height, 0, 0, 400, 400);
-    bodyScoreFinal = await predictScore(cropBody, bodyModel);
-  }
-  // Animate Face
-  scorePhase = 1;
-  await animateTicker(faceScoreFinal);
-  // Animate Body
-  scorePhase = 2;
-  await animateTicker(bodyScoreFinal);
-  // Show final panel
-  scorePhase = 3;
-  document.getElementById("vibeText").innerText = `Vibe: ${vibes[Math.floor(Math.random()*vibes.length)]}`;
-  document.getElementById("typeText").innerText = `Type: ${roastTypes[Math.floor(Math.random()*roastTypes.length)]}`;
-  document.getElementById("badgeText").innerText = `🏆 ${badges[Math.floor(Math.random()*badges.length)]}`;
-  document.getElementById("rankText").innerText = randomRank();
-  document.getElementById("resultsPanel").style.opacity = 1;
-  confetti();
-}
-
-async function animateTicker(finalScore) {
-  return new Promise(res=>{
-    tickerScore = 0.0;
-    const step = finalScore / 40;
-    const intv = setInterval(()=>{
-      tickerScore += step;
-      if (tickerScore >= finalScore) {
-        tickerScore = finalScore;
-        clearInterval(intv);
-        res();
-      }
-    },50);
+function openCamera() {
+  closeModal();
+  navigator.mediaDevices.getUserMedia({ video: true }).then(stream => {
+    const video = document.createElement('video');
+    video.autoplay = true; video.srcObject = stream;
+    document.body.appendChild(video);
+    const snapBtn = document.createElement('button');
+    snapBtn.innerText = "Capture";
+    snapBtn.onclick = () => {
+      const canvas = document.createElement('canvas');
+      canvas.width = video.videoWidth; canvas.height = video.videoHeight;
+      canvas.getContext('2d').drawImage(video, 0, 0);
+      stream.getTracks().forEach(t => t.stop());
+      video.remove(); snapBtn.remove();
+      const img = new Image();
+      img.src = canvas.toDataURL();
+      img.onload = () => processImage(img);
+    };
+    document.body.appendChild(snapBtn);
   });
+}
+
+async function detectPeople(img) {
+  const faces = await faceapi.detectAllFaces(img);
+  let detections = faces.map(f => ({ type: 'face', box: f.box }));
+  const bodies = await detector.estimatePoses(img);
+  bodies.forEach(b => {
+    if (b.keypoints?.length) {
+      const xs = b.keypoints.map(k => k.x), ys = b.keypoints.map(k => k.y);
+      detections.push({ type: 'body', box: { x: Math.min(...xs), y: Math.min(...ys), width: Math.max(...xs)-Math.min(...xs), height: Math.max(...ys)-Math.min(...ys) } });
+    }
+  });
+  return detections;
 }
 
 async function predictScore(canvas, model) {
@@ -169,17 +207,63 @@ async function predictScore(canvas, model) {
   return Math.max(1, Math.min(10, s[0])).toFixed(1);
 }
 
-(async ()=>{
-  await loadModels();
-  await initCamera();
-  canvas = document.getElementById('overlay');
-  ctx = canvas.getContext('2d');
-  canvas.width = video.videoWidth;
-  canvas.height = video.videoHeight;
-  detectFrame();
-  setTimeout(scoreSequence, 2000); // Give time for camera to settle
-})();
-</script>
+function animateScore(elId, finalScore, cb) {
+  let current = 0.0, step = finalScore/40;
+  const el = document.getElementById(elId);
+  const interval = setInterval(() => {
+    current += step;
+    if(current >= finalScore){
+      current = finalScore; clearInterval(interval);
+      el.classList.add("glow");
+      document.body.classList.add("flash");
+      setTimeout(()=>document.body.classList.remove("flash"),500);
+      document.getElementById('resultCard').classList.add("shake");
+      setTimeout(()=>document.getElementById('resultCard').classList.remove("shake"),400);
+      if(cb) cb();
+    }
+    el.innerText = `${elId==='faceScore'?'Face':'Body'} Score: ${current.toFixed(1)}/10`;
+  },50);
+}
 
+async function processImage(img) {
+  document.getElementById("loader").style.display = "block";
+  const detections = await detectPeople(img);
+  let faceScore = "-", bodyScore = "-";
+  for (let det of detections) {
+    const { type, box } = det, pad=0.2;
+    const crop=document.createElement('canvas'); crop.width=400; crop.height=400;
+    crop.getContext('2d').drawImage(img, box.x-box.width*pad, box.y-box.height*pad, box.width*(1+pad*2), box.height*(1+pad*2), 0, 0, 400, 400);
+    if (type === 'face') faceScore = await predictScore(crop, faceModel);
+    if (type === 'body') bodyScore = await predictScore(crop, bodyModel);
+  }
+  document.getElementById("preview").src = img.src;
+  document.getElementById("resultCard").style.display = "block";
+  document.getElementById("loader").style.display = "none";
+  animateScore('faceScore', parseFloat(faceScore), () => {
+    animateScore('bodyScore', parseFloat(bodyScore), () => {
+      document.getElementById("vibeText").innerText = `Vibe: ${vibes[Math.floor(Math.random()*vibes.length)]}`;
+      document.getElementById("typeText").innerText = `Type: ${roastTypes[Math.floor(Math.random()*roastTypes.length)]}`;
+      document.getElementById("badgeText").innerText = `🏆 ${badges[Math.floor(Math.random()*badges.length)]}`;
+      document.getElementById("rankText").innerText = randomRank();
+      document.querySelectorAll(".vibe,.type,.badge,.rank").forEach(e=>e.style.opacity=1);
+      confetti();
+    });
+  });
+}
+
+document.getElementById('shareBtn').addEventListener('click', async () => {
+  if (navigator.share) await navigator.share({ title: 'Hot or Not AI', text: 'Check my AI score!', url: window.location.href });
+});
+document.getElementById('rateMeBtn').addEventListener('click', openModal);
+document.getElementById('fileInput').addEventListener('change', async e => {
+  closeModal();
+  const file = e.target.files[0];
+  if (!file) return;
+  const img = await faceapi.bufferToImage(file);
+  processImage(img);
+});
+
+loadModels();
+</script>
 </body>
 </html>
